fixing margins on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,8 @@ body {
   /* margin: auto; */
   /* position: relative; */
   color: #ffcbcb;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
 .nav{
