--- a/src/Home.css
+++ b/src/Home.css
@@ -5,6 +5,7 @@
     font-family: Roboto,;
     /* text-align: center; */
     /* justify-content: center; */
+    padding-right: 40px;
 }
 
 @media screen and (min-width: 601px) {
